# polars-rust-examples

./: .gitignore  Cargo.toml  LICENSE  README.md
my_proc_macro/: Cargo.toml
my_proc_macro/src/: lib.rs
src/: ex_001_getting_started.rs  ex_002_categorical.rs  ex_003_enum.rs  ex_004_data_structures.rs  ex_005_contexts.rs  ex_006_expressions.rs  ex_007_lazy_eager_api.rs  ex_008_streaming_api.rs  ex_009_expression_operators.rs  ex_010_expression_column_selections.rs  ex_011_functions.rs  ex_012_casting.rs  ex_013_strings.rs  ex_014_aggregation.rs  ex_015_missing_data.rs  ex_016_window.rs  ex_017_folds.rs  ex_018_lists_arrays.rs  ex_019_struct.rs  main.rs  output.csv  utilities.rs
